# sentinel-ai

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml
backend/: .env.example  requirements.txt  worker.py
backend/app/: config.py  main.py
backend/app/auth/: github.py  jwt.py  router.py
backend/app/db/: database.py
backend/app/scanner/: base.py  behavioral.py  bias.py  config_audit.py  cve.py  judge.py  report.py  scorer.py  serialization.py  service.py
backend/app/scans/: models.py  router.py
backend/app/users/: models.py  router.py
cli/: README.md  distilbert-base-uncased-report.html  distilbert-base-uncased-report.json  pyproject.toml
cli/sentinelai/: auth.py  config.py  logout.py  main.py  scan.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/pages/: ApiDocs.jsx  AuthCallback.jsx  Dashboard.jsx  Developers.jsx  LandingPage.jsx  Login.jsx  Profile.jsx  ScanDetail.jsx
