[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelai"
version = "0.1.0"
description = "AI model security scanner CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
sentinelai = "sentinelai.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelai*"]